Project CreatedBy auto-added as Member Files modified - [FormToInspectionCategoryMapping.java,cx2_published_dataModel.json,Forms.variables.json,ViewProject.html,MasterInspections.java]

--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -20,6 +20,16 @@
                                         class="muni-logo"></wm-picture>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
+                                <wm-gridrow name="gridrow75_2">
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn128"></wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn129">
+                                        <wm-label padding="unset 0.5em" name="label80" class="col-md-12 control-label" caption="Project Owner"></wm-label>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="4" name="gridcolumn131">
+                                        <wm-label padding="unset 0.5em" name="label81" fontsize="12" fontweight="bold" caption="bind:Variables.CurrentProject.firstRecord.usersByCreatedBy.firstName+&quot; &quot;+Variables.CurrentProject.firstRecord.usersByCreatedBy.lastName"></wm-label>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="2" name="gridcolumn130"></wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow6" padding=".5em unset">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn107_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn8">
