Update- Form Design for Inspections Files modified - [EditForm.html,EditForm.variables.json]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -495,7 +495,7 @@
                                     </wm-gridrow>
                                 </wm-layoutgrid>
                             </wm-tabpane>
-                            <wm-tabpane name="tabpaneInspections" title="Inspections">
+                            <wm-tabpane name="tabpaneInspections" title="Inspections" show="bind:Widgets.liveformUpdateFormType.formWidgets.inspections.datavalue">
                                 <wm-layoutgrid name="layoutgrid1">
                                     <wm-gridrow name="gridrow2" padding="unset unset 1em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn3">
